@@ -82,6 +82,7 @@ Ondrej Donek <ondrejd(at)gmail(dot)com> - Support for creating PHP classes with 
 Daniel Marjamaki <danielm77(at)spray(dot)se> - Small improvements
 Jiří Techet <techet(at)gmail(dot)com> - Various patches
 Erik de Castro Lopo <mle+tools(at)mega-nerd(dot)com> - Various patches
+Thomas Huth <th(dot)huth(at)googlemail(dot)com> - Forth filetype
 
 Translators:
 ------------
