@@ -37,6 +37,7 @@ Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.zsh;*.ash;*.
 Tcl=*.tcl;*.tk;*.wish;
 CSS=*.css;
 Docbook=*.docbook;
+Forth=*.fs;*.fth;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
 XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
