@@ -84,6 +84,7 @@ typedef enum
 	GEANY_FILETYPES_TXT2TAGS,
 	GEANY_FILETYPES_ABC,
 	GEANY_FILETYPES_VERILOG,
+	GEANY_FILETYPES_FORTH,
 	/* ^ append items here */
 	GEANY_MAX_BUILT_IN_FILETYPES	/* Don't use this, use filetypes_array->len instead */
 }
