@@ -2202,6 +2202,52 @@ static void styleset_f77(ScintillaObject *sci, gint ft_id)
 }
 
 
+static void styleset_forth_init(gint ft_id, GKeyFile *config, GKeyFile *config_home)
+{
+	new_styleset(ft_id, 12);
+
+	get_keyfile_style(config, config_home, "default", &style_sets[ft_id].styling[0]);
+	get_keyfile_style(config, config_home, "comment", &style_sets[ft_id].styling[1]);
+	get_keyfile_style(config, config_home, "commentml", &style_sets[ft_id].styling[2]);
+	get_keyfile_style(config, config_home, "identifier", &style_sets[ft_id].styling[3]);
+	get_keyfile_style(config, config_home, "control", &style_sets[ft_id].styling[4]);
+	get_keyfile_style(config, config_home, "keyword", &style_sets[ft_id].styling[5]);
+	get_keyfile_style(config, config_home, "defword", &style_sets[ft_id].styling[6]);
+	get_keyfile_style(config, config_home, "preword1", &style_sets[ft_id].styling[7]);
+	get_keyfile_style(config, config_home, "preword2", &style_sets[ft_id].styling[8]);
+	get_keyfile_style(config, config_home, "number", &style_sets[ft_id].styling[9]);
+	get_keyfile_style(config, config_home, "string", &style_sets[ft_id].styling[10]);
+	get_keyfile_style(config, config_home, "locale", &style_sets[ft_id].styling[11]);
+
+	style_sets[ft_id].keywords = g_new(gchar*, 2);
+	get_keyfile_keywords(config, config_home, "primary", ft_id, 0);
+	style_sets[ft_id].keywords[1] = NULL;
+
+}
+
+
+static void styleset_forth(ScintillaObject *sci, gint ft_id)
+{
+	apply_filetype_properties(sci, SCLEX_FORTH, ft_id);
+
+	sci_set_keywords(sci, 0, style_sets[ft_id].keywords[0]);
+
+	set_sci_style(sci, STYLE_DEFAULT, ft_id, 0);
+	set_sci_style(sci, SCE_FORTH_DEFAULT, ft_id, 0);
+	set_sci_style(sci, SCE_FORTH_COMMENT, ft_id, 1);
+	set_sci_style(sci, SCE_FORTH_COMMENT_ML, ft_id, 2);
+	set_sci_style(sci, SCE_FORTH_IDENTIFIER, ft_id, 3);
+	set_sci_style(sci, SCE_FORTH_CONTROL, ft_id, 4);
+	set_sci_style(sci, SCE_FORTH_KEYWORD, ft_id, 5);
+	set_sci_style(sci, SCE_FORTH_DEFWORD, ft_id, 6);
+	set_sci_style(sci, SCE_FORTH_PREWORD1, ft_id, 7);
+	set_sci_style(sci, SCE_FORTH_PREWORD2, ft_id, 8);
+	set_sci_style(sci, SCE_FORTH_NUMBER, ft_id, 9);
+	set_sci_style(sci, SCE_FORTH_STRING, ft_id, 10);
+	set_sci_style(sci, SCE_FORTH_LOCALE, ft_id, 11);
+}
+
+
 static void styleset_fortran_init(gint ft_id, GKeyFile *config, GKeyFile *config_home)
 {
 	new_styleset(ft_id, 15);
@@ -3233,6 +3279,7 @@ void highlighting_init_styles(gint filetype_idx, GKeyFile *config, GKeyFile *con
 		init_styleset_case(GEANY_FILETYPES_DOCBOOK,	styleset_docbook_init);
 		init_styleset_case(GEANY_FILETYPES_FERITE,	styleset_ferite_init);
 		init_styleset_case(GEANY_FILETYPES_F77,		styleset_f77_init);
+		init_styleset_case(GEANY_FILETYPES_FORTH,	styleset_forth_init);
 		init_styleset_case(GEANY_FILETYPES_FORTRAN,	styleset_fortran_init);
 		init_styleset_case(GEANY_FILETYPES_HASKELL,	styleset_haskell_init);
 		init_styleset_case(GEANY_FILETYPES_HAXE,	styleset_haxe_init);
@@ -3302,6 +3349,7 @@ void highlighting_set_styles(ScintillaObject *sci, GeanyFiletype *ft)
 		styleset_case(GEANY_FILETYPES_DOCBOOK,	styleset_docbook);
 		styleset_case(GEANY_FILETYPES_FERITE,	styleset_ferite);
 		styleset_case(GEANY_FILETYPES_F77,		styleset_f77);
+		styleset_case(GEANY_FILETYPES_FORTH,	styleset_forth);
 		styleset_case(GEANY_FILETYPES_FORTRAN,	styleset_fortran);
 		styleset_case(GEANY_FILETYPES_HASKELL,	styleset_haskell);
 		styleset_case(GEANY_FILETYPES_HAXE,		styleset_haxe);
