@@ -14,6 +14,12 @@
  * src/document.c:
    Avoid delay and redrawing when automatically opening a new document
    after closing one.
+ * scintilla/LexForth.cxx, scintilla/makefile.win32,
+   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,
+   src/about.c, src/filetypes.c, src/filetypes.h, THANKS,
+   data/filetypes.forth, data/filetype_extensions.conf, ChangeLog,
+   wscript:
+   Add Forth filetype (patch by Thomas Huth, thanks).
 
 
 2010-09-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
